@@ -1,8 +1,10 @@
 package com.dwelguisz.year2017;
 
 import com.dwelguisz.base.AoCDay;
+import com.dwelguisz.utilities.Coord2D;
 import org.apache.commons.lang3.tuple.Pair;
 
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -10,38 +12,42 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 public class HexEd extends AoCDay {
-    Map<String, Pair<Integer, Integer>> hexDir;
+    Map<String, Coord2D> HEX_DIR = Map.of(
+            "n", new Coord2D(0,-1),
+            "ne", new Coord2D(1, -1),
+            "se", new Coord2D(1,0),
+            "s", new Coord2D(0,1),
+            "sw", new Coord2D(-1, 1),
+            "nw", new Coord2D(-1,0));
 
     public int hexDistance(int x, int y) {
         return ((Math.abs(x) + Math.abs(y) + Math.abs(x+y))/2);
     }
 
     public void solve() {
-        hexDir = new HashMap<>();
-        hexDir.put("n",Pair.of(0,-1));
-        hexDir.put("ne", Pair.of(1,-1));
-        hexDir.put("se", Pair.of(1,0));
-        hexDir.put("s", Pair.of(0,1));
-        hexDir.put("sw", Pair.of(-1,1));
-        hexDir.put("nw", Pair.of(-1,0));
-        List<String> lines = readFile("/home/dwelguisz/personal/advent-of-code/src/resources/year2017/day11/input.txt");
-        List<String> steps = Arrays.stream(lines.get(0).split(",")).collect(Collectors.toList());
-        int x = 0;
-        int y = 0;
+        timeMarkers[0] = Instant.now().toEpochMilli();
+        List<String> lines = readResoruceFile(2017,11,false,0);
+        List<String> steps = Arrays.stream(lines.get(0).split(",")).toList();
+        timeMarkers[1] = Instant.now().toEpochMilli();
+        Pair<Integer, Integer> pathInfo = tranversePath(steps);
+        part1Answer = pathInfo.getLeft();
+        timeMarkers[2] = Instant.now().toEpochMilli();
+        part2Answer = pathInfo.getRight();
+        timeMarkers[3] = Instant.now().toEpochMilli();
+    }
+
+    Pair<Integer, Integer> tranversePath(List<String> steps) {
+        Coord2D currentLoc = new Coord2D(0,0);
         int furthest = 0;
         int dist = 0;
         for (String step : steps) {
-            Pair<Integer, Integer> value = hexDir.get(step);
-            x += value.getLeft();
-            y += value.getRight();
-            dist = hexDistance(x,y);
+            Coord2D value = HEX_DIR.get(step);
+            currentLoc = currentLoc.add(value);
+            dist = hexDistance(currentLoc.x, currentLoc.y);
             if (dist > furthest) {
                 furthest = dist;
             }
         }
-        System.out.println(String.format("Part 1 Answer: %d",dist));
-        System.out.println(String.format("Part 2 Answer: %d",furthest));
-
-
+        return Pair.of(dist, furthest);
     }
 }
